package moprocoeval.airline;

public class EconomySeat extends Seat {
  // generated properties

  // end of generated properties

  // generated associations

  // end of generated associations

  // generated getters and setters

  // end of generated getters and setters

  // generated accessors for associations

  // end of generated accessors for associations

  // generated operations

}
