package moprocoeval.airline;

public enum SeatStatus {
    AVAILABLE, RESERVED
}
