package moprocoeval.airline;

public class BusinessSeat extends Seat {
  // generated properties
  private Integer legroomInches;

  // end of generated properties

  // generated associations

  // end of generated associations

  // generated getters and setters
  public Integer getLegroomInches() {
    return this.legroomInches;
  }

  public void setLegroomInches(Integer legroomInches) {
    this.legroomInches = legroomInches;
  }
  // end of generated getters and setters

  // generated accessors for associations

  // end of generated accessors for associations

  // generated operations

}
