@startuml
hide circle

class Airline {
  +name: String
  +addFlight(flight: Flight)
}

class Flight {
  +flightNumber: String
  +date: Date
  +addSeat(seat: Seat)
}

abstract class Seat {
  +seatNumber: String
  +status: SeatStatus
  +reserve(passenger: Passenger): Reservation
}

class EconomySeat

class BusinessSeat {
  +legroomInInches: Integer
}

class Passenger {
  +passengerId: String
  +name: String
}

class Reservation {
  +reservationDate: Date
  +changeSeat(newSeat: Seat)
  +cancel()
}

enum SeatStatus {
  Available
  Reserved
}

Airline "+airline 1" *-- "+flights *" Flight: has flights
Flight "+flight 1" *-- "+seats *" Seat: has seats
Passenger "+passenger 1" o-- "+reservations *" Reservation: has reservations
Seat "+seat 1" o-- "+reservation 0..1" Reservation: is reserved

Seat <|-- EconomySeat
Seat <|-- BusinessSeat
@enduml